--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo/graphic-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo/graphic-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MOSOSO:모두모이소설</title>
   </head>
